[gd_scene load_steps=5 format=3 uid="uid://boxx73w4js55p"]

[ext_resource type="Script" path="res://armor._in.gd" id="1_jqp2h"]

[sub_resource type="Animation" id="Animation_6mlg2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1q3lq"]
resource_name = "TransIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -300)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yaqds"]
_data = {
"RESET": SubResource("Animation_6mlg2"),
"TransIn": SubResource("Animation_1q3lq")
}

[node name="Armor" type="Node2D"]
position = Vector2(0, -300)
script = ExtResource("1_jqp2h")

[node name="exit" type="Button" parent="."]
offset_left = 2006.0
offset_top = 366.0
offset_right = 2193.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 100
text = "X"

[node name="Label" type="Label" parent="."]
offset_left = 819.0
offset_top = 312.0
offset_right = 1562.0
offset_bottom = 515.0
theme_override_font_sizes/font_size = 80
text = "Armor shop
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 40.0

[node name="Buy!" type="Button" parent="Control"]
layout_mode = 0
offset_left = 901.0
offset_top = 1231.0
offset_right = 1437.0
offset_bottom = 1376.0
theme_override_font_sizes/font_size = 100
text = "Buy"

[node name="prev" type="Button" parent="Control"]
layout_mode = 0
offset_left = 571.0
offset_top = 911.0
offset_right = 715.0
offset_bottom = 1085.0
theme_override_font_sizes/font_size = 100
text = "<
"

[node name="next" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1666.0
offset_top = 910.0
offset_right = 1810.0
offset_bottom = 1084.0
theme_override_font_sizes/font_size = 100
text = ">"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control"]

[node name="name" type="Label" parent="Control"]
offset_left = 806.0
offset_top = 742.0
offset_right = 1549.0
offset_bottom = 945.0
theme_override_font_sizes/font_size = 80
text = "name
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_yaqds")
}

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 98.0
offset_top = 301.0
offset_right = 2182.0
offset_bottom = 1216.0

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control/Buy!" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Control/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Control/next" to="." method="_on_next_pressed"]
